--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,36 @@
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #00ffba;
+    color:#000000000050;
+    text-align: center;
+}
 table {
-	border-collapse: collapse;
+    border-radius: 10px;
+    margin: auto;
+    padding: 5px;
+    background:#000000;
+    color:white;
+}
+tr, td {
+    text-align: center;
+    margin: auto;
+    padding: 3px;
+    background-color: #529c5f;
+    color:white;
+}
+th {
+    border-spacing: 1px;
+    background-color: #529c5f;
+    padding: 14px;
+    color:white;
 }
 
+#heading {
+    font-size: 18px;
+    margin: auto;
+}
+#footing {
+    font-size: 15px;
+    margin: auto;
+    
+}
